--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
 
-:root{
+:root {
     --color-dark-blue: hsl(234, 12%, 34%);
     --color-grayish-blue: hsl(229, 6%, 66%);
     --color-light-gray: hsl(0, 0%, 98%);
@@ -8,14 +8,17 @@
     --color-cyan: hsl(180, 62%, 55%);
     --color-orange: hsl(34, 97%, 64%);
     --color-blue: hsl(212, 86%, 64%);
+
+    font-size: 93.75%;
 }
 
 body {
     background-color: var(--color-light-gray);
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
+    font-size: 1rem;
     margin: 0 auto;
     border: 0;
+    width: 100%;
 }
 
 .attribution { 
@@ -33,8 +36,8 @@ header {
     width: 35%;
 }
 
-header h1{
-    font-size: 32px;
+header h1 {
+    font-size: 2.13rem;
     color: var(--color-dark-blue);
     font-weight: 200;
 }
@@ -54,7 +57,6 @@ header p {
 
     justify-content: center;
     align-items: center;
-
     gap: 24px;
 }
 
@@ -122,7 +124,9 @@ header p {
 
 .grid .item h2 {
     color: var(--color-dark-blue);
+    line-height: 8px;
 }
+
 
 .grid .item p {
     color: var(--color-grayish-blue);
@@ -130,15 +134,35 @@ header p {
 
 .grid .item .icon {
     text-align: right;
+    margin-top: 36px;
 }
 
-@media (max-width: 375px) {
+@media(max-width: 375px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin: 48px auto;
+    }
+
+    header h1{
+        font-size: 1.6rem;
+        margin: 16px auto;
+    }
+
+    header p {
+        width: 95%;
+        margin: 0 auto;
+    }
+
     .grid {
         display: flex;
-        width: 90vw;
         flex-direction: column;
+        width: 100%;
     }
-    header {
-        width: 80vw;
+
+    .grid .item {
+        width: 80%;
+        margin: 0 auto;
     }
 }
